adding model images

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,9 +1,14 @@
 ---
-title: "A Sufficient Statistics Approach to Modeling U.S. Health Insurance Market Reforms"
+title: "A Sufficient Statistics Approach to Modeling Health Insurance Market Reform"
 output: github_document
 ---
 
-The objective of this repository is to summarize current work on a sufficient statistics approach to modeling U.S. insurance markets. 
+The objective of this repository is to summarize current work on a sufficient statistics approach to modeling reform of U.S. insurance markets. 
 
+# Overview of Approach 
+
+![](./figures/01_model-diagrams_simple-model.png)
+
+![](./figures/01_model-diagrams_markov-model.png)
 
 
