--- a/README.Rmd
+++ b/README.Rmd
@@ -34,15 +34,28 @@ The objective of this document is to sketch out some initial thoughts and analyt
 
 ## Background and Motivation
 
-Models projecting the impact of health reforms on health insurance programs and markets play an important role in shaping the contours of U.S. health policy.  In 2017, for example, Congressional attempts Congressional attempts to repeal and replace the 2010 Affordable Care Act (ACA). These efforts collapsed, in part, under public outcry after the Congressional Budget Office (CBO) [projected](https://www.nytimes.com/2017/05/24/us/politics/cbo-congressional-budget-office-health-care.html) that upwards of 23 million people would become uninsured. The twists and turns of earlier debates over the ACA--and before it, [the Clinton health plan](figures/01_nyt-clinton-cbo.png)--also were shaped by modelers' assessments of how reform would impact insurance coverage, premiums, health care spending, and government costs. 
+Models projecting the impact of reforms to health insurance programs and markets play an important role in shaping U.S. health policy.  In 2017, for example, Congressional attempts  to repeal and replace the 2010 Affordable Care Act (ACA) collapsed, in part, under public outcry after the Congressional Budget Office (CBO) [projected](https://www.nytimes.com/2017/05/24/us/politics/cbo-congressional-budget-office-health-care.html) that upwards of 23 million people would become uninsured. The twists and turns of earlier debates over the ACA--and before it, [the Clinton health plan](figures/01_nyt-clinton-cbo.png)--also were shaped by modelers' assessments of how reform would impact insurance coverage, premiums, health care spending, and government costs. 
 
-Microsimulation models used by the CBO and by others to produce these estimates draw on a large and growing literature on economic theory, and on evaluations of past state and federal reform efforts. Yet while modelers often draw on the same evidence base as inputs into their models, microsimulation models differ greatly in their structure, underlying data sources and assumptions. Consequently, models often produce widely varying projections of the same policy alternative. As such, microsimulation models have been subject to criticisms over their "black box"-like qualities, and over their tendency to produce estimates with unin to no accompanying sense of uncertainty or sensitivity to alternative parameter values and assumptions. 
+Microsimulation models used by the CBO and by others to produce these estimates draw on economic theory and on a large and growing literature evaluating past state and federal reform efforts. Yet while modelers derive many model inputs from this shared evidence base, models differ greatly in their structure, underlying data sources and assumptions. Not surprisingly, these models often produce widely varying projections of the same policy alternative. 
+
+This current state of affairs has subjected microsimulation modeling of U.S. health policy to criticism over their "black box" like qualities, and over their tendency to produce estimates with little to no accompanying sense of uncertainty or sensitivity to alternative parameter values and assumptions. Moreover, modelers have understandably but unfortunately shied away from producing normative assessments of the overall welfare impacts of policy alternatives. As a consequence, existing models produce an array of intermediary point estimates on welfare-relevant outcomes (changes in coverage, premiums, spending and government costs) and leave it to policymakers to weigh those factors when considering policy alternatvies.
+
+This approach has a number of important shortcomings. First, despite modelers' attempts to caveat the high degree of uncertainty in their estimates, projections are afforded a false sense of precision in high-stakes policy debates. Second, the "black box" like quality of most models makes it difficult for researchers without intimate knowledge of the underlying models to know whether and how their work could inform modeling efforts. ...
+
+This project develops an approach to ex ante policy evaluation that addresses many of these shortcomings. First, I outline a generalized framework for modeling health reform alternatives. This framework is simple yet powerful and has roots in health economic modeling techniques often used for health technology assessments, and in the "sufficient statistics" approach to welfare evaluation. 
+I demonstrate that this framework can not only encompass many existing approaches to microsimulation, but also lends itself to powerful counterfactual policy evaluations based simply on reduced form estimates (i.e., without the need for detailed individual-level microsimulation). Second, within this framework I tie together two imoportant but diverse approaches to assessing the welfare impacts of policy. 
+
+
+
+
+
+<!-- Microsimulation models have been subject to criticisms over their "black box"-like qualities, and over their tendency to produce estimates with unin to no accompanying sense of uncertainty or sensitivity to alternative parameter values and assumptions.  -->
 
 ![](./figures/01_model-diagrams_simple-model.png)
 
 # Health Reform Modeling as a Discrete Time Markov Process
 
-In this section, I will outline a simple discrete time markov model to summarize changes in health insurance in the U.S. population. We begin by defining an ex ante occupancy vector $\mathbf{p_{exa}}$, which summarizes the fraction of the population in each major health insurance type (employer-sponsored insurance, other private insurance, public insurance, and uninsured) ($p_{exa,esi} = Pr(I_{exa,k} = \texttt{esi})$)
+This section outlines a simple discrete time markov model for health insurance coverage in the U.S. population. We begin by defining an ex ante occupancy vector $\mathbf{p_{exa}}$ that summarizes the fraction of the population in each major health insurance type (employer-sponsored insurance, other private insurance, public insurance, and uninsured) in the pre-reform period.
 
 \[
 \mathbf{p_{exa}}=
@@ -70,7 +83,7 @@ Now define the transition probability matrix:
 \]
 where $r_{k,j}$ is the probability of transitioning from ex ante category $k$ to ex post category $j$.
 
-Finally, we can define an ex post occupancy vector as follows:
+Finally, we can define an ex post occupancy vector:
 
 \[
 \mathbf{p_{exp}}=
@@ -107,8 +120,44 @@ p_{exp,esi}\\
 p_{exp,pri}\\
 p_{exp,pub}\\
 p_{exp,unin} \\
-    \end{pmatrix}^T
+    \end{pmatrix}'
   \end{aligned}
 \]
 
-In the equation above, the set of transition probabilities $r_{k,j}$ can be considered sufficient statistics for evaluating the impact of a policy change on health insurance coverage in the population. 
+In the equation above, the set of transition probabilities $r_{k,j}$ can be considered sufficient statistics for evaluating the impact of a policy change on health insurance coverage in the population. That is, once we know these probabilities and how they change under a given reform option, we can simulate the impact on the overall coverage distribution in the population. By attaching costs to population movements among insurance types, we can simulate the cost impact to the government. And finally, as we show below, social welfare weights can also be attached to population movements. These weights can then be aggregated and compared across reform alternatives to make normative assessments of policy options. 
+
+
+
+
+
+### Estimating the Transition Probability Matrix
+
+We first obtain a simple cross tabulation of insurance coverage in January 2013 from the SIPP. 
+
+```{r, echo = FALSE}
+# source(here("R/estimate-overall-transition-probability-matrix.R"))
+ex_ante <- 
+  read_rds(here("output/ex-ante-overall-population/ex-ante-distribution.rds"))
+
+ex_ante %>% 
+  mutate(n = round(n/1e6,1)) %>% 
+  mutate(pct = round(100*pct,1)) %>% 
+  mutate(insurance_type = c("ESI","Private-Other","Public","Uninsured")) %>% 
+  knitr::kable(caption = "Ex Ante Distribution of Insurance Coverage, January 2013",col.names= c("Category","Number (millions)","Percent"), format = "html")
+```
+
+Next we fit nonpaarametric (Kaplan-Meier) and parametric multi-state models to obtain the transition probabilities by December 2013. 
+
+```{r}
+trans_probs <- 
+    read_rds(here("output/ex-ante-overall-population/transition-probabilities-kaplan-meier.rds"))
+
+trans_probs %>% filter(time==13) %>% pluck("data") %>% pluck(1) %>% 
+  mutate_at(vars(-1),function(x) round(100*x,2)) %>% 
+  knitr::kable(caption = "Transition Probabilities", format = "html")
+```
+
+```{r}
+ 
+```
+
