changes to README

--- a/README.Rmd
+++ b/README.Rmd
@@ -36,7 +36,7 @@ The objective of this document is to sketch out some initial thoughts and analyt
 
 Models projecting the impact of reforms to health insurance programs and markets play an important role in shaping U.S. health policy.  In 2017, for example, Congressional attempts  to repeal and replace the 2010 Affordable Care Act (ACA) collapsed, in part, under public outcry after the Congressional Budget Office (CBO) [projected](https://www.nytimes.com/2017/05/24/us/politics/cbo-congressional-budget-office-health-care.html) that upwards of 23 million people would become uninsured. The twists and turns of earlier debates over the ACA--and before it, [the Clinton health plan](figures/01_nyt-clinton-cbo.png)--also were shaped by modelers' assessments of how reform would impact insurance coverage, premiums, health care spending, and government costs. 
 
-Microsimulation models used by the CBO and by others to produce these estimates draw on economic theory and on a large and growing literature evaluating past state and federal reform efforts. Yet while modelers derive many model inputs from this shared evidence base, models differ greatly in their structure, underlying data sources and assumptions. Not surprisingly, these models often produce widely varying projections of the same policy alternative. 
+Microsimulation models used by the CBO and by others to produce these estimates draw on economic theory and on a large and growing literature evaluating past state and federal reform efforts. Yet while modelers derive many inputs from this shared evidence base, the evidence is uncertain & not in uniform agreement. Moreover, models also differ in their structure, underlying data sources and assumptions. Not surprisingly, these models often produce widely varying projections of the same policy alternative. 
 
 This current state of affairs has subjected microsimulation modeling of U.S. health policy to criticism over their "black box" like qualities, and over their tendency to produce estimates with little to no accompanying sense of uncertainty or sensitivity to alternative parameter values and assumptions. Moreover, modelers have understandably but unfortunately shied away from producing normative assessments of the overall welfare impacts of policy alternatives. As a consequence, existing models produce an array of intermediary point estimates on welfare-relevant outcomes (changes in coverage, premiums, spending and government costs) and leave it to policymakers to weigh those factors when considering policy alternatvies.
 
