--- a/README.Rmd
+++ b/README.Rmd
@@ -36,11 +36,11 @@ The objective of this document is to sketch out some initial thoughts and analyt
 
 Models projecting the impact of reforms to health insurance programs and markets play an important role in shaping U.S. health policy.  In 2017, for example, Congressional attempts  to repeal and replace the 2010 Affordable Care Act (ACA) collapsed, in part, under public outcry after the Congressional Budget Office (CBO) [projected](https://www.nytimes.com/2017/05/24/us/politics/cbo-congressional-budget-office-health-care.html) that upwards of 23 million people would become uninsured. The twists and turns of earlier debates over the ACA--and before it, [the Clinton health plan](figures/01_nyt-clinton-cbo.png)--also were shaped by modelers' assessments of how reform would impact insurance coverage, premiums, health care spending, and government costs. 
 
-Microsimulation models used by the CBO and by others to produce these estimates draw on economic theory and on a large and growing literature evaluating past state and federal reform efforts. Yet while modelers derive many inputs from this shared evidence base, the evidence is uncertain & not in uniform agreement. Moreover, models also differ in their structure, underlying data sources and assumptions. Not surprisingly, models often produce widely varying projections of the same policy alternative. 
+Microsimulation models used by the CBO and by others to produce these estimates draw on economic theory and on a large and growing literature evaluating past state and federal reform efforts. Yet while modelers derive many inputs from this shared evidence base, the evidence is uncertain & not in uniform agreement. Models also differ in their structure, underlying data sources and assumptions. Not surprisingly, models often produce widely varying projections of the same policy alternative. 
 
-This current state of affairs has subjected microsimulation models of U.S. health policy to criticism over their "black box" like qualities, and over their tendency to produce estimates with little to no accompanying sense of uncertainty or sensitivity to alternative parameter values and assumptions. Moreover, modelers have understandably but unfortunately shied away from producing normative assessments of the overall welfare impacts of policy alternatives. As a consequence, existing models produce an array of intermediary point estimates on welfare-relevant outcomes (changes in coverage, premiums, spending and government costs) and leave it to policymakers to weigh those factors when considering policy alternatvies.
+This current state of affairs has subjected microsimulation models to criticism over their "black box" like qualities, and over their tendency to produce estimates with a limited accompanying sense of uncertainty or sensitivity to alternative parameter values and assumptions. Moreover, modelers have understandably but unfortunately shied away from producing normative assessments of the overall welfare impacts of policy alternatives. As a consequence, existing models produce an array of intermediary point estimates on welfare-relevant outcomes (changes in coverage, premiums, spending and government costs) and leave it to policymakers to weigh those factors when considering policy alternatvies.
 
-This approach has a number of important shortcomings. First, despite modelers' attempts to caveat the high degree of uncertainty in their estimates, projections are afforded a false sense of precision in high-stakes policy debates. Second, the "black box" like quality of most models makes it difficult for researchers  to know whether and how their work informs modeling efforts. ...
+This approach has a number of important shortcomings. First, despite modelers' attempts to caveat the high degree of uncertainty in their estimates, projections are afforded a false sense of precision in high-stakes policy debates. Second, the "black box" like quality of most models makes it difficult for researchers  to know whether and how their work can inform modeling efforts. This leaves a muddled sense of how future research could be directed and refined to optimize impact. 
 
 This project develops an approach to ex ante policy evaluation that addresses many of these shortcomings. First, I outline a generalized framework for modeling health reform alternatives. This framework is simple yet powerful and has roots in health economic modeling techniques often used for health technology assessments, and in the "sufficient statistics" approach to welfare evaluation. I demonstrate that this framework can not only encompass many existing approaches to microsimulation, but also lends itself to powerful counterfactual policy evaluations based simply on reduced form estimates (i.e., without the need for detailed individual-level microsimulation). Second, within this framework I tie together two imoportant but diverse approaches to assessing the welfare impacts of policy. 
 
