adding in MEPS transitions

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "A Sufficient Statistics Approach to Ex Ante Health Policy Evaluation"
 author: "John A. Graves"
-output: github_document
+output: html_document
 ---
 
 
@@ -30,19 +30,17 @@ insurance_sipp_lut <- c(
 
 # Introduction 
 
-The objective of this document is to sketch out some initial thoughts and analytics around a unified framework for ex ante policy evaluation in health care. 
+Models projecting the impact of reforms to health insurance programs and markets play an important role in shaping U.S. health policy.  For example, in 2017 Congressional attempts to repeal and replace the 2010 Affordable Care Act (ACA) collapsed, in part, under public outcry after the Congressional Budget Office (CBO) [projected](https://www.nytimes.com/2017/05/24/us/politics/cbo-congressional-budget-office-health-care.html) that upwards of 23 million people would become uninsured. The [twists](https://prescriptions.blogs.nytimes.com/2009/10/07/analysis-sees-baucus-bill-meeting-obamas-cost-and-deficit-targets/) [and](https://www.nytimes.com/2009/10/19/us/19iht-letter.html) [turns](https://www.nytimes.com/2009/10/06/health/policy/06health.html) of earlier debates over the ACA--and before it, [the Clinton health plan](figures/01_nyt-clinton-cbo.png)--also were shaped by modelers' assessments of how reform would impact insurance coverage, premiums, health care spending, and government costs. 
 
-## Background and Motivation
+Microsimulation models used by the CBO and by others to produce these estimates draw on economic theory and on a large and growing literature evaluating past state and federal reform efforts. Yet while modelers derive many inputs from this shared evidence base, the evidence is uncertain and not in uniform agreement. Models also differ in their structure, underlying data sources and assumptions. It should come as no surprise, then, that models often produce [widely varying projections of the same reform proposal](https://www.nytimes.com/interactive/2019/04/10/upshot/medicare-for-all-bernie-sanders-cost-estimates.html). 
 
-Models projecting the impact of reforms to health insurance programs and markets play an important role in shaping U.S. health policy.  In 2017, for example, Congressional attempts  to repeal and replace the 2010 Affordable Care Act (ACA) collapsed, in part, under public outcry after the Congressional Budget Office (CBO) [projected](https://www.nytimes.com/2017/05/24/us/politics/cbo-congressional-budget-office-health-care.html) that upwards of 23 million people would become uninsured. The twists and turns of earlier debates over the ACA--and before it, [the Clinton health plan](figures/01_nyt-clinton-cbo.png)--also were shaped by modelers' assessments of how reform would impact insurance coverage, premiums, health care spending, and government costs. 
+This current state of affairs has subjected microsimulation models to criticism over their "black box" like qualities and their tendency to produce estimates with a limited accompanying sense of uncertainty or sensitivity to alternative parameter values and assumptions. Moreover, modelers have understandably but unfortunately shied away from producing normative assessments of overall welfare impacts. That is, existing models simply produce an array of intermediary point estimates on welfare-relevant outcomes (changes in coverage, premiums, spending and government costs) and leave it to policymakers to weigh those factors when considering policy choices.
 
-Microsimulation models used by the CBO and by others to produce these estimates draw on economic theory and on a large and growing literature evaluating past state and federal reform efforts. Yet while modelers derive many inputs from this shared evidence base, the evidence is uncertain & not in uniform agreement. Models also differ in their structure, underlying data sources and assumptions. Not surprisingly, models often produce widely varying projections of the same policy alternative. 
+This approach to health policy modeling has a number of important shortcomings. First, despite modelers' attempts to caveat the high degree of uncertainty in their estimates, modeled projections are often afforded a false sense of precision in high-stakes policy debates. Second, the "black box" like quality of most models makes it difficult for researchers  to know whether and how their work can inform and improve modeling efforts. The development, execution, and maintenance costs of microsimulation models are also considerable. Combined, these factors  contribute to a muddled sense of how the health economic and policy research enterprise could be directed and refined to optimize policy impact. 
 
-This current state of affairs has subjected microsimulation models to criticism over their "black box" like qualities, and over their tendency to produce estimates with a limited accompanying sense of uncertainty or sensitivity to alternative parameter values and assumptions. Moreover, modelers have understandably but unfortunately shied away from producing normative assessments of the overall welfare impacts of policy alternatives. As a consequence, existing models produce an array of intermediary point estimates on welfare-relevant outcomes (changes in coverage, premiums, spending and government costs) and leave it to policymakers to weigh those factors when considering policy alternatvies.
+This study outlines an approach to ex ante policy evaluation that addresses many of the above shortcomings. First, I outline a generalized discrete time modeling framework for assessing the cost, coverage and welfare impact of health reform policies. This simple yet powerful framework has roots in health economic modeling methods often used for health technology assessments, as well as in the "sufficient statistics" approach to welfare evaluation developed in public finance. I demonstrate that this modeling framework not only encompasses many existing approaches to health policy microsimulation, but also lends itself counterfactual policy evaluations based only on reduced form estimates. That is, the framework allows researchers to investigate the coverage and cost impacts of  reform alternatives without the need for detailed individual-level microsimulation modeling.  As a proof of concept of this approach, I demonstrate how evidence on the impact of Medicaid expansion derived from a difference-in-difference study design, combined with regression-discontinuity estimates on willingness to pay for subsidized health insurance (Finkelstein, Hendren and Shepard 2019) can be harnessed to model the impact of expansion of coverage via public programs versus via targeted subsidies for private coverage. 
 
-This approach has a number of important shortcomings. First, despite modelers' attempts to caveat the high degree of uncertainty in their estimates, projections are afforded a false sense of precision in high-stakes policy debates. Second, the "black box" like quality of most models makes it difficult for researchers  to know whether and how their work can inform modeling efforts. This leaves a muddled sense of how future research could be directed and refined to optimize impact. 
-
-This project develops an approach to ex ante policy evaluation that addresses many of these shortcomings. First, I outline a generalized framework for modeling health reform alternatives. This framework is simple yet powerful and has roots in health economic modeling techniques often used for health technology assessments, and in the "sufficient statistics" approach to welfare evaluation. I demonstrate that this framework can not only encompass many existing approaches to microsimulation, but also lends itself to powerful counterfactual policy evaluations based simply on reduced form estimates (i.e., without the need for detailed individual-level microsimulation). Second, within this framework I tie together two imoportant but diverse approaches to assessing the welfare impacts of policy. 
+Second, within this framework I tie together imoportant but diverse approaches to assessing uncertainty and the welfare impacts of policy. Specifically, I draw linkages between standard welfare measures used in health economic evaluation (e.g., net health and monetary benefits of health technologies and policies) and the marginal value of public funds (MVPFs) developed in a series of important studies by Hendren. This linkage allows for a systematic approach to understanding modeling and parameter uncertainty using probabilistic sensitivity analyses (PSAs) and value of information (VOI) methods. 
 
 ![](./figures/01_model-diagrams_simple-model.png)
 
@@ -119,10 +117,6 @@ p_{exp,unin} \\
 
 In the equation above, the set of transition probabilities $r_{k,j}$ can be considered sufficient statistics for evaluating the impact of a policy change on health insurance coverage in the population. That is, once we know these probabilities and how they change under a given reform option, we can simulate the impact on the overall coverage distribution in the population. By attaching costs to population movements among insurance types, we can simulate the cost impact to the government. And finally, as we show below, social welfare weights can also be attached to population movements. These weights can then be aggregated and compared across reform alternatives to make normative assessments of policy options. 
 
-
-
-
-
 ### Estimating the Transition Probability Matrix
 
 We first obtain a simple cross tabulation of insurance coverage in January 2013 from the SIPP. 
@@ -131,12 +125,20 @@ We first obtain a simple cross tabulation of insurance coverage in January 2013 
 # source(here("R/estimate-overall-transition-probability-matrix.R"))
 ex_ante <- 
   read_rds(here("output/ex-ante-overall-population/ex-ante-distribution.rds"))
+ex_ante_meps <- 
+  read_rds(here("output/ex-ante-overall-population/ex-ante-distribution-meps.rds"))
 
 ex_ante %>% 
   mutate(n = round(n/1e6,1)) %>% 
   mutate(pct = round(100*pct,1)) %>% 
   mutate(insurance_type = c("ESI","Private-Other","Public","Uninsured")) %>% 
-  knitr::kable(caption = "Ex Ante Distribution of Insurance Coverage, January 2013",col.names= c("Category","Number (millions)","Percent"), format = "html")
+  cbind(
+    ex_ante_meps %>% 
+    mutate(n = round(n/1e6,1)) %>% 
+    mutate(pct = round(100*pct,1)) %>% 
+    select(-insurance_type) 
+  ) %>% 
+  knitr::kable(caption = "Ex Ante Distribution of Insurance Coverage, January 2013",col.names= c("Category","SIPP: Number (millions)","SIPP: Percent", "MEPS: Number (millions)","MEPS: Percent"), format = "html")
 ```
 
 Next we fit nonpaarametric (Kaplan-Meier) and parametric multi-state models to obtain the transition probabilities by December 2013. 
@@ -145,12 +147,17 @@ Next we fit nonpaarametric (Kaplan-Meier) and parametric multi-state models to o
 trans_probs <- 
     read_rds(here("output/ex-ante-overall-population/transition-probabilities-kaplan-meier.rds"))
 
-trans_probs %>% filter(time==13) %>% pluck("data") %>% pluck(1) %>% 
+trans_probs %>% filter(time==24) %>% pluck("data") %>% pluck(1) %>% 
   mutate_at(vars(-1),function(x) round(100*x,2)) %>% 
   knitr::kable(caption = "Transition Probabilities", format = "html")
 ```
 
 ```{r}
- 
+ trans_probs_meps <- 
+    read_rds(here("output/ex-ante-overall-population/transition-probabilities-kaplan-meier-meps.rds"))
+
+trans_probs_meps %>% filter(time==24) %>% pluck("data") %>% pluck(1) %>% 
+  mutate_at(vars(-1),function(x) round(100*x,2)) %>% 
+  knitr::kable(caption = "Transition Probabilities", format = "html")
 ```
 
