changes to README

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "A Sufficient Statistics Approach to Ex Ante Health Policy Evaluation"
 author: "John A. Graves"
-output: html_document
+output: github_document
 ---
 
 
@@ -30,17 +30,28 @@ insurance_sipp_lut <- c(
 
 # Introduction 
 
-Models projecting the impact of reforms to health insurance programs and markets play an important role in shaping U.S. health policy.  For example, in 2017 Congressional attempts to repeal and replace the 2010 Affordable Care Act (ACA) collapsed, in part, under public outcry after the Congressional Budget Office (CBO) [projected](https://www.nytimes.com/2017/05/24/us/politics/cbo-congressional-budget-office-health-care.html) that upwards of 23 million people would become uninsured. The [twists](https://prescriptions.blogs.nytimes.com/2009/10/07/analysis-sees-baucus-bill-meeting-obamas-cost-and-deficit-targets/) [and](https://www.nytimes.com/2009/10/19/us/19iht-letter.html) [turns](https://www.nytimes.com/2009/10/06/health/policy/06health.html) of earlier debates over the ACA--and before it, [the Clinton health plan](figures/01_nyt-clinton-cbo.png)--also were shaped by modelers' assessments of how reform would impact insurance coverage, premiums, health care spending, and government costs. 
+Models projecting the impact of reforms to health insurance programs and markets play an important role in shaping U.S. health policy.  In 2017, for example, Congressional attempts to repeal and replace the 2010 Affordable Care Act (ACA) were hampered by public outcry after the Congressional Budget Office (CBO) [projected](https://www.nytimes.com/2017/05/24/us/politics/cbo-congressional-budget-office-health-care.html) that upwards of 23 million people would become uninsured. The [twists](https://prescriptions.blogs.nytimes.com/2009/10/07/analysis-sees-baucus-bill-meeting-obamas-cost-and-deficit-targets/) [and](https://www.nytimes.com/2009/10/19/us/19iht-letter.html) [turns](https://www.nytimes.com/2009/10/06/health/policy/06health.html) of earlier debates over the ACA--and before it, [the Clinton health plan](figures/01_nyt-clinton-cbo.png)--also were shaped by modelers' assessments of how reform would impact insurance coverage, premiums, health care spending, and government costs. 
 
-Microsimulation models used by the CBO and by others to produce these estimates draw on economic theory and on a large and growing literature evaluating past state and federal reform efforts. Yet while modelers derive many inputs from this shared evidence base, the evidence is uncertain and not in uniform agreement. Models also differ in their structure, underlying data sources and assumptions. It should come as no surprise, then, that models often produce [widely varying projections of the same reform proposal](https://www.nytimes.com/interactive/2019/04/10/upshot/medicare-for-all-bernie-sanders-cost-estimates.html). 
+Microsimulation models used by the CBO and by others to produce these estimates draw on economic theory and on a large and growing literature evaluating past state and federal reform efforts. Yet while models derive  inputs from this shared evidence base, the evidence is uncertain and not in uniform agreement. Models also differ in their structure, underlying data sources and assumptions. It should come as no surprise, then, that models often produce [widely varying projections of the same reform proposal](https://www.nytimes.com/interactive/2019/04/10/upshot/medicare-for-all-bernie-sanders-cost-estimates.html). 
 
-This current state of affairs has subjected microsimulation models to criticism over their "black box" like qualities and their tendency to produce estimates with a limited accompanying sense of uncertainty or sensitivity to alternative parameter values and assumptions. Moreover, modelers have understandably but unfortunately shied away from producing normative assessments of overall welfare impacts. That is, existing models simply produce an array of intermediary point estimates on welfare-relevant outcomes (changes in coverage, premiums, spending and government costs) and leave it to policymakers to weigh those factors when considering policy choices.
+This current state of affairs has subjected microsimulation models to criticism over their "black box" like qualities and their tendency to produce estimates with a limited accompanying sense of uncertainty or sensitivity to alternative parameter values and assumptions. Moreover, modelers have understandably but unfortunately shied away from producing comparative assessments of overall welfare impact. Existing models typically produce an array of intermediary point estimates on welfare-relevant outcomes (e.g., changes in coverage, premiums, spending and government costs) and leave it to policymakers to weigh those factors when comparing policy choices.
 
-This approach to health policy modeling has a number of important shortcomings. First, despite modelers' attempts to caveat the high degree of uncertainty in their estimates, modeled projections are often afforded a false sense of precision in high-stakes policy debates. Second, the "black box" like quality of most models makes it difficult for researchers  to know whether and how their work can inform and improve modeling efforts. The development, execution, and maintenance costs of microsimulation models are also considerable. Combined, these factors  contribute to a muddled sense of how the health economic and policy research enterprise could be directed and refined to optimize policy impact. 
+This approach to health policy modeling has a number of important shortcomings. First, despite modelers' attempts to caveat the high degree of uncertainty in their estimates, modeled projections are often afforded a false sense of precision in high-stakes policy debates. This results in decisions being made in spite of a high degree of uncertainty surrounding the budgetary, health and coverage impact of proposed reforms. Second, the "black box"-like opacity of microsimulation models makes it difficult for researchers to know whether and how their work can inform  modeling efforts. Finally, the development, execution, and maintenance costs of microsimulation models are  considerable. Combined, these factors contribute to high barriers to understanding and a muddled sense of how the health economic and policy research enterprise could be further refined to improve policy decision making. 
 
-This study outlines an approach to ex ante policy evaluation that addresses many of the above shortcomings. First, I outline a generalized discrete time modeling framework for assessing the cost, coverage and welfare impact of health reform policies. This simple yet powerful framework has roots in health economic modeling methods often used for health technology assessments, as well as in the "sufficient statistics" approach to welfare evaluation developed in public finance. I demonstrate that this modeling framework not only encompasses many existing approaches to health policy microsimulation, but also lends itself counterfactual policy evaluations based only on reduced form estimates. That is, the framework allows researchers to investigate the coverage and cost impacts of  reform alternatives without the need for detailed individual-level microsimulation modeling.  As a proof of concept of this approach, I demonstrate how evidence on the impact of Medicaid expansion derived from a difference-in-difference study design, combined with regression-discontinuity estimates on willingness to pay for subsidized health insurance (Finkelstein, Hendren and Shepard 2019) can be harnessed to model the impact of expansion of coverage via public programs versus via targeted subsidies for private coverage. 
+This study outlines an approach to ex ante policy evaluation that addresses many of the above shortcomings. First, I outline a generalized discrete time modeling framework for assessing the cost, coverage and welfare impact of health reform policies. This framework has roots in health economic modeling methods used worldwide for health technology assessment, and in the "sufficient statistics" approach to welfare evaluation developed in public finance. I demonstrate that this modeling framework can encompass many existing approaches to health policy microsimulation, but also facilitates simple yet powerful counterfactual policy aassessments based on reduced form estimates. That is, the framework provides researchers with a simple tool to investigate the coverage and cost impacts of  reform alternatives without the need for a detailed individual-level microsimulation model.  As a proof of concept, I demonstrate how differences-in-differences evidence on the impact of Medicaid expansion on coverage, combined with regression-discontinuity estimates on willingness to pay for subsidized health insurance (Finkelstein, Hendren and Shepard 2019) can be harnessed to model the impact of further expansion of coverage via public programs versus via increased subsidies for private coverage. 
 
-Second, within this framework I tie together imoportant but diverse approaches to assessing uncertainty and the welfare impacts of policy. Specifically, I draw linkages between standard welfare measures used in health economic evaluation (e.g., net health and monetary benefits of health technologies and policies) and the marginal value of public funds (MVPFs) developed in a series of important studies by Hendren. This linkage allows for a systematic approach to understanding modeling and parameter uncertainty using probabilistic sensitivity analyses (PSAs) and value of information (VOI) methods. 
+Second, within this framework I tie together diverse approaches to assessing uncertainty and the welfare impacts of policy. Specifically, I draw linkages between standard wefare impact measures used in health technology assessment (e.g., net health benefit and net monetary benefit) and the marginal value of public funds (MVPFs), a summary measure of the costs and benefits of public policies  (Hendren 2017). This linkage allows for a systematic approach to understanding parameter and modeling uncertainty based on probalistic sensitivity anlayses (PSAs) and value of information (VOI) methods. 
+
+Intuitively, VOI methods quantify the opportunity cost of decision making under uncertainty.  At a given policy efficiency or willingness-to-pay threshold (e.g., a MVPF value of 0.8, above which a policy might be implemented but below which it may not),  uncertaninty may or may not affect optimal decision making. If policy decisions based on comparative assessments of MVPF are  insensitive to varying assumptions or to estimation uncertainty in model parameters, then the value of information on these parameters is low -- i.e., it is not worth pursuing additional research to reduce uncertainty. If policy decisions are sensitive to this uncertainty, however, then these methods provide a guidepost for priortizing and refining future research. The value of information on individual parameters in a model can be estimated, and these 
+
+
+As an example, I  apply VOI methos to reduced form evidence on teh MVPF  willingness to pay (WTP) for subsidized health insurance, which i
+
+<!-- I show how VOI methods can fileter uncertainty in RD paramters from Finkelstein , as well as assumptions  -->
+
+
+<!-- That is, VOI methdos can be used to quantify the opportunity cost of a "wrong" decision. In that way, we can identify and prioritize research and modeling efforts on the parameters and/or assumptions that drive uncertainty. To demonstrate the power of VOI -->
+
 
 ![](./figures/01_model-diagrams_simple-model.png)
 
@@ -115,7 +126,7 @@ p_{exp,unin} \\
   \end{aligned}
 \]
 
-In the equation above, the set of transition probabilities $r_{k,j}$ can be considered sufficient statistics for evaluating the impact of a policy change on health insurance coverage in the population. That is, once we know these probabilities and how they change under a given reform option, we can simulate the impact on the overall coverage distribution in the population. By attaching costs to population movements among insurance types, we can simulate the cost impact to the government. And finally, as we show below, social welfare weights can also be attached to population movements. These weights can then be aggregated and compared across reform alternatives to make normative assessments of policy options. 
+In the equation above, the set of transition probabilities $r_{k,j}$ can be considered sufficient statistics for evaluating the impact of a policy change on health insurance coverage in the population. That is, once we know these probabilities and how they change under a given reform option, we can simulate the impact on the overall coverage distribution in the population. By attaching costs to population movements among insurance types, we can simulate the cost impact to the government. And finally, as we show below, social welfare weights can also be attached to population movements. These weights can then be aggregated and compared across reform alternatives to make comparative evaluations of policy options. 
 
 ### Estimating the Transition Probability Matrix
 
