--- a/R/introduction.Rmd
+++ b/R/introduction.Rmd
@@ -1,65 +1,13 @@
-Models projecting the impact of reforms to health insurance programs and markets play an important role in shaping United States health policy. In 2017, for example, Congressional attempts to repeal and replace the 2010 Affordable Care Act (ACA) collapsed, in part, under public outcry after the Congressional Budget Office (CBO) [projected](https://www.nytimes.com/2017/05/24/us/politics/cbo-congressional-budget-office-health-care.html) that upwards of 23 million people would become uninsured. The twists and turns of earlier debates over the ACA--and before it, [the Clinton health plan](figures/01_nyt-clinton-cbo.png)--also were shaped by modelers' assessments of how reform would impact insurance coverage, premiums, health care spending, and government costs.  
+Models projecting the impact of reforms to health insurance programs and markets play an important role in shaping U.S. health policy.  In 2017, for example, Congressional attempts to repeal and replace the 2010 Affordable Care Act (ACA) were hampered by public outcry after the Congressional Budget Office (CBO) [projected](https://www.nytimes.com/2017/05/24/us/politics/cbo-congressional-budget-office-health-care.html) that upwards of 23 million people would become uninsured. The [twists](https://prescriptions.blogs.nytimes.com/2009/10/07/analysis-sees-baucus-bill-meeting-obamas-cost-and-deficit-targets/) [and](https://www.nytimes.com/2009/10/19/us/19iht-letter.html) [turns](https://www.nytimes.com/2009/10/06/health/policy/06health.html) of earlier debates over the ACA--and before it, [the Clinton health plan](figures/01_nyt-clinton-cbo.png)--also were shaped by modelers' assessments of how reform would impact insurance coverage, premiums, health care spending, and government costs. 
 
-Microsimulation models used by the CBO and by others to produce these assessments utilize parameters derived from economic theory and from a large and growing literature evaluating prior state and federal health reforms.  Yet while major models draw from this common literature, they often vary in their underlying data sources, structure, and assumptions.  Consequently, models often produce varying estimates of the same policy option--.  As such, microsimulation models have been subject to criticisms over their "black box"-like qualities, and over their tendency to produce estimates with little to no accompanying sense of uncertainty or sensitivity to alternative parameter values and assumptions.
+Microsimulation models used by the CBO and by others to produce these estimates draw on economic theory and on a large and growing literature evaluating past state and federal reform efforts. Yet while models derive  inputs from this shared evidence base, the evidence is uncertain and not in uniform agreement. Models also differ in their structure, underlying data sources and assumptions. It should come as no surprise, then, that models often produce [widely varying projections of the same reform proposal](https://www.nytimes.com/interactive/2019/04/10/upshot/medicare-for-all-bernie-sanders-cost-estimates.html). 
 
-<!-- This current state of affairs is often attributed to the high costs of developing and maintaining a microsimulation model and to the unwillingness of policymakers to consider a range of plausible outcomes given that uncertainty. Moreover, modelers have traditionally shied away from making normative assessments of the overall welfare impacts of policy alternatives. Consequently, existing models produce an array of point estimates on welfare-relevant outcomes (coverage, premiums, spending and government costs) and leave it to policymakers to weigh those factors when considering policy alternatvies.  -->
+This current state of affairs has subjected microsimulation models to criticism over their "black box" like qualities and their tendency to produce estimates with a limited accompanying sense of uncertainty or sensitivity to alternative parameter values and assumptions. Moreover, modelers have understandably but unfortunately shied away from producing comparative assessments of overall welfare impact. Existing models typically produce an array of intermediary point estimates on welfare-relevant outcomes (e.g., changes in coverage, premiums, spending and government costs) and leave it to policymakers to weigh those factors when comparing policy choices.
 
-<!--   -->
+This approach to health policy modeling has a number of important shortcomings. First, despite modelers' attempts to caveat the high degree of uncertainty in their estimates, modeled projections are often afforded a false sense of precision in high-stakes policy debates. This results in decisions being made in spite of a high degree of uncertainty surrounding the budgetary, health and coverage impact of proposed reforms. Second, the "black box"-like opacity of microsimulation models makes it difficult for researchers to know whether and how their work can inform  modeling efforts. Finally, the development, execution, and maintenance costs of microsimulation models are  considerable. Combined, these factors contribute to high barriers to understanding and a muddled sense of how the health economic and policy research enterprise could be further refined to improve policy decision making. 
 
+This study outlines an approach to ex ante policy evaluation that addresses many of the above shortcomings. First, I outline a generalized discrete time modeling framework for assessing the cost, coverage and welfare impact of health reform policies. This framework has roots in health economic modeling methods used worldwide for health technology assessment, and in the "sufficient statistics" approach to welfare evaluation developed in public finance. I demonstrate that this modeling framework can encompass many existing approaches to health policy microsimulation, but also facilitates simple yet powerful counterfactual policy aassessments based on reduced form estimates. That is, the framework provides researchers with a simple tool to investigate the coverage and cost impacts of  reform alternatives without the need for a detailed individual-level microsimulation model.  As a proof of concept, I demonstrate how differences-in-differences evidence on the impact of Medicaid expansion on coverage, combined with regression-discontinuity estimates on willingness to pay for subsidized health insurance (Finkelstein, Hendren and Shepard 2019) can be harnessed to model the impact of further expansion of coverage via public programs versus via increased subsidies for private coverage. 
 
-<!-- The lack of consideration of parameter sensitivity and uncertainty muddles the ability of researchers to refine the scope and direction of research to improve  -->
+Second, within this framework I tie together diverse approaches to assessing uncertainty and the welfare impacts of policy. Specifically, I draw linkages between standard wefare impact measures used in health technology assessment (e.g., net health benefit and net monetary benefit) and the marginal value of public funds (MVPFs), a summary measure of the costs and benefits of public policies  (Hendren 2017). This linkage allows for a systematic approach to understanding parameter and modeling uncertainty based on probalistic sensitivity anlayses (PSAs) and value of information (VOI) methods. 
 
-<!-- This paper develops a framework for ex ante policy modeling that addresses each of these shortcomings. First, I outline a generalized framework for modeling health reform alternatives that echoes the "sufficient statistics" approach to welfare evaluation developed in the economics literature. I demonstrate that this framework can not only encompass many existing approaches to microsimulation, but also lends itself to powerful counterfactual policy evaluations based simply on reduced form, population-level estimates--that is, without the need to develop and maintain complex underlying microsimulation models. Second, based on this framework I evaluate -->
-
-
-<!-- The net result of the above .... But it does not need to be this way. In this paper, I show that existing approaches to microsimulation, as well as many of the quantities of interest from research, fall under a simple "sufficient statistics" approach to modeling health reform alternatives. This framework both provides a simple and intuitive platform to quickly model the impact of reform alternatives. Couple the use of a single welfare-relevant metric wtih value of information methods to quantify the opportunity cost of uncertainty in modeled outcomes. Can be used to guide decisionmaking under uncertainty, and be used to set a clearer course for future research on quantities and estimates most likely to improve our ability to make informed decisions over altnerative reform priorities.  -->
-
-
-<!-- This framework both unifies many existing approaches to individual-level microsimulation under a single umbrella  -->
-
-
-<!-- paof the current state of microsimulation modeling has also erected substantial time and cost barriers for anyone interested understanding, let alone constructing,  --> 
-
-
-<!-- With few exceptions, research efforts to inform theese policy debates, too, often focus on producing reduced form estimates of the impacts of policy changes on welfare-relevant outcomes--but with no strong underlying sense of whether these efforts are in service of richer understanding of parameters with the strongest influence  -->
-
-<!-- reduced form estimates of welfare-relevant outcomes--but with no strong underlying sense of whether these efforts are in service of reducing uncertainty around parameters  -->
-
-
-
-
-
-<!-- researchers have  -- but those pursuits have been scattershot, with no strong underlying sense of whether these estimates will inform  -->
-
-
-<!-- in service of   -->
-
-<!-- Parameter estimates drawn from the literature, moreover, are uncertain.  -->
-
-
-
-
-<!-- Moreover, the modeling process is often so opaque that researchers must invest considerable time and effort to understand the mechanics of specific models.  -->
-
-<!-- unless one invests considerable time and effort to understand the mechanics of specific models,  -->
-
-<!-- and to the often reactive  -->
-<!-- and backwards-looking process of modeling reform alternatives. That is, a policy change is proposed, and then modelers look towards incorporating the best available evidence to inform their projection of how that policy change will impact relevant outcomes. When the relevant evidence does not exist, modelers must turn to informed assumptions based on economic theory,  -->
-
-<!-- There is no reason, in principle, that things be this way.  -->
-
-
-
-<!-- While there has been considerable effort to produce reduced-form estimates on individual parameters, until recently there has been little microsimulation attention paid to overall welfare impacts of specific policies. This is a significant shortcoming because such an approach can both guide policy decisions and be used to prioritize areas of modeling uncertainty that could be informed by better focusing the direction of future research.  -->
-
-
-
-
-
-
-
-
-
-<!-- The objective of this paper is to present a simplified "sufficient statistics" modeling approach for U.S. health care markets. This approach unites both traditional microsimulation approaches to modeling counterfactual policy changes with  -->
-
-<!-- Models projecting the impact of reforms to health insurance  markets have played an outsized role in shaping both the politics and policy of health care in the United States over the last 30 years.  -->
+Intuitively, VOI methods quantify the opportunity cost of decision making under uncertainty.  At a given policy efficiency or willingness-to-pay threshold (e.g., a MVPF value of 0.8, above which a policy might be implemented but below which it may not),  uncertaninty may or may not affect optimal decision making. If policy decisions based on comparative assessments of MVPF are  insensitive to varying assumptions or to estimation uncertainty in model parameters, then the value of information on these parameters is low -- i.e., it is not worth pursuing additional research to reduce uncertainty. If policy decisions are sensitive to this uncertainty, however, then these methods provide a guidepost for priortizing and refining future research. The value of information on individual parameters in a model can be estimated, and these 
